--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+     
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Domine:wght@500&family=Montserrat&family=Oswald:wght@500&family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/18f5e78df1.js" crossorigin="anonymous"></script>  
 
     <!-- bootstarp -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
