--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    
 <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik&display=swap" rel="stylesheet">
     <title>PPOC | IIT Kanpur</title>
   </head>
   <body>
@@ -52,6 +56,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    -->  
   </body>
 </html>
