--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Public Policy and Opinion Cell is based in IIT Kanpur that brings global events into valuable perspective. We aim to provide our members with first-class exposure to world leaders, policymakers, historians and economists, engaging students in discussions on issues of social, economic, political and historical significance and expose them to the challenges of policymaking, encouraging them to pursue careers in the field of public policy and governance."
     />
+    <meta name="keywords" content="PPOC, ppoc iitk, iitk, iit kanpur, public policy and opinion cell">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
